--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -5,7 +5,7 @@
  */
 
 body {
-    background-color: #f8f8f8;
+    // background-color: #f8f8f8;
 }
 
 #wrapper {
@@ -354,6 +354,14 @@ table.dataTable thead .sorting:after {
 }
 
 
+.graph {
+    padding : 15px;
+}
 
 
+
+.center-logo {
+    margin: -2px auto 0px;
+    padding-bottom: 10px;
+}
 
